--- a/stylesheetbasic.css
+++ b/stylesheetbasic.css
@@ -2,3 +2,8 @@ div.pfeil {
 position: fixed;
 bottom: 5px;
 right: 5px; }
+div.fixed {
+position: fixed;
+top: 50%;
+left: 50%;
+transform: translate(-50%,  -50%)}
