--- a/stylesheetbasic.css
+++ b/stylesheetbasic.css
@@ -11,3 +11,7 @@ position: fixed;
 top: 50%;
 left: 50%;
 transform: translate(-50%,  -50%)}
+div.quotes {
+position: fixed;
+top: 50%;
+transform: translate(-50%)}
