--- a/stylesheetbasic.css
+++ b/stylesheetbasic.css
@@ -14,4 +14,4 @@ transform: translate(-50%,  -50%)}
 div.quotes {
 position: fixed;
 top: 50%;
-transform: translate(-50%)}
+transform: translate(0, -50%)}
