--- a/stylesheetbasic.css
+++ b/stylesheetbasic.css
@@ -12,6 +12,6 @@ top: 50%;
 left: 50%;
 transform: translate(-50%,  -50%)}
 div.quotes {
-position: absolute;
+position: fixed;
 top: 50%;
 transform: translate(0, -50%)}
