--- a/stylesheetbasic.css
+++ b/stylesheetbasic.css
@@ -10,8 +10,9 @@ div.qbild {
 position: fixed;
 top: 50%;
 left: 50%;
-transform: translate(-50%,  -50%)}
+transform: translate(-50%,  -50%);}
 div.quotes {
 position: absolute;
 top: 50%;
-transform: translate(0, -50%)}
+left: 50%;
+transform: translate(-50%,  -50%);}
