--- a/stylesheetbasic.css
+++ b/stylesheetbasic.css
@@ -12,7 +12,8 @@ top: 50%;
 left: 50%;
 transform: translate(-50%,  -50%);}
 div.quotes {
-position: absolute;
+position: fixed;
+width: 90%;
 top: 50%;
 left: 50%;
 transform: translate(-50%,  -50%);}
