--- a/stylesheetbasic.css
+++ b/stylesheetbasic.css
@@ -15,5 +15,4 @@ div.quotes {
 position: fixed;
 width: 90%;
 top: 50%;
-left: 80%;
-transform: translate(-20%,  -50%);}
+transform: translate(0,  -50%);}
