--- a/stylesheetbasic.css
+++ b/stylesheetbasic.css
@@ -12,7 +12,7 @@ top: 50%;
 left: 50%;
 transform: translate(-50%,  -50%);}
 div.quotes {
-position: fixed;
 width: 90%;
-top: 50%;
-transform: translate(0,  -50%);}
+height: 2em;
+display: table-cell;
+vertical-align: middle;
