--- a/stylesheetbasic.css
+++ b/stylesheetbasic.css
@@ -1,5 +1,3 @@
-p.quotes {
-padding: 0 3em 0 3em;
 div.pfeil {
 position: fixed;
 bottom: 5px;
@@ -14,6 +12,8 @@ top: 50%;
 left: 50%;
 transform: translate(-50%,  -50%);}
 div.quotes {
+line-height: 2;
+font-size: 1.5em;
 position: fixed;
 width: 100%;
 top: 50%;
