--- a/stylesheetbasic.css
+++ b/stylesheetbasic.css
@@ -15,7 +15,7 @@ div.quotes {
 line-height: 2;
 font-size: 1.5em;
 position: fixed;
-width: 90%;
+width: 90vw;
 top: 50%;
 left: 50%;
 transform: translate(-50%,  -50%);}
